# uov

./: CHANGELOG.md  Cargo.toml  README.md
benches/: uov_bench.rs
src/: lib.rs
tests/: kat_test.rs  sdk_test.rs
