[package]
name = "uov"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8"
ctr = "0.9"
sha3 = "0.10"
cipher = "0.4"

[dev-dependencies]
aes = "0.8"
cipher = "0.4"
sha2 = "0.10"
hex = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "uov_bench"
harness = false
